WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152099
Modern IDB: storage/indexeddb/metadata.html fails
https://bugs.webkit.org/show_bug.cgi?id=152099
Summary
Modern IDB: storage/indexeddb/metadata.html fails
Brady Eidson
Reported
2015-12-09 15:48:09 PST
Modern IDB: storage/indexeddb/metadata.html fails We did not properly reset object store info when version change transactions abort.
Attachments
patch v1
(11.15 KB, patch)
2015-12-09 15:50 PST
,
Brady Eidson
achristensen
: review+
achristensen
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(11.15 KB, patch)
2015-12-09 15:57 PST
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2015-12-09 15:50:39 PST
Created
attachment 267053
[details]
patch v1
WebKit Commit Bot
Comment 2
2015-12-09 15:53:15 PST
Attachment 267053
[details]
did not pass style-queue: ERROR: LayoutTests/ChangeLog:12: Need whitespace between colon and description [changelog/filechangedescriptionwhitespace] [5] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alex Christensen
Comment 3
2015-12-09 15:55:18 PST
Comment on
attachment 267053
[details]
patch v1 View in context:
https://bugs.webkit.org/attachment.cgi?id=267053&action=review
> LayoutTests/ChangeLog:12 > + *
stylebot doesn't like this.
Brady Eidson
Comment 4
2015-12-09 15:57:05 PST
Created
attachment 267055
[details]
Patch for landing
WebKit Commit Bot
Comment 5
2015-12-09 16:53:33 PST
Comment on
attachment 267055
[details]
Patch for landing Clearing flags on attachment: 267055 Committed
r193878
: <
http://trac.webkit.org/changeset/193878
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug