Modern IDB: storage/indexeddb/metadata.html fails https://bugs.webkit.org/show_bug.cgi?id=152099

Reviewed by Alex Christensen.

Source/WebCore:

Test: storage/indexeddb/modern/abort-objectstore-info.html
      And at least one existing failure now passes.

We did not properly reset object store info when version change transactions aborted.

* Modules/indexeddb/client/IDBObjectStoreImpl.cpp:
(WebCore::IDBClient::IDBObjectStore::IDBObjectStore):
(WebCore::IDBClient::IDBObjectStore::rollbackInfoForVersionChangeAbort):
* Modules/indexeddb/client/IDBObjectStoreImpl.h:

* Modules/indexeddb/client/IDBTransactionImpl.cpp:
(WebCore::IDBClient::IDBTransaction::abort):

LayoutTests:

* platform/mac-wk1/TestExpectations:
* storage/indexeddb/modern/abort-objectstore-info-expected.txt: Added.
* storage/indexeddb/modern/abort-objectstore-info.html: Added.
* storage/indexeddb/modern/resources/abort-objectstore-info.js: Added.


Canonical link: https://commits.webkit.org/170239@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@193878 268f45cc-cd09-0410-ab3c-d52691b4dbfc